[package]
name = "numfmt"
version = "1.1.1"
authors = ["Kurt Lawrence <kurtlawrence.info>"]
edition = "2021"
description = "Fast and friendly Rust number formatting"
repository = "https://github.com/kdr-aus/numfmt"
license = "MIT"
keywords = ["float-format", "number-format", "formatting"]
categories = ["localization", "value-formatting"]

[dependencies]
dtoa = "1"
itoa = "1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "numfmt-benchmarks"
path = "bench.rs"
harness = false
