[package]
name = "numfmt"
version = "1.1.1"
authors = ["Kurt Lawrence <kurtlawrence.info>"]
edition = "2021"
description = "Fast and friendly Rust number formatting"
repository = "https://github.com/kurtlawrence/numfmt"
license = "MIT"
keywords = ["float-format", "number-format", "formatting"]
categories = ["localization", "value-formatting"]

[dependencies]
dtoa = "1.0.10"
itoa = "1.0.15"

[dev-dependencies]
criterion = "0.6"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "numfmt-benchmarks"
path = "bench.rs"
harness = false
